try to switch to newer jdk

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ python:
 script:
   - sudo apt install openjdk-8-jdk
   - java -version
+  - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
+  - java -version
   - pytest test.py
