--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: xenial
 python:
   - 3.5
 script:
-  - sudo apt install openjdk-8-jdk icedtea-8-plugin
+  - sudo apt install openjdk-8-jdk icedtea-8-plugin apt-show-versions
   - sudo apt-show-versions java-common
   - java -version
   - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
