trying a different method

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ dist: xenial
 python:
   - 3.5
 script:
-  - sudo apt install openjdk-8-jdk icedtea-8-plugin apt-show-versions
-  - sudo apt-show-versions java-common
+  - sudo apt install openjdk-8-jdk icedtea-8-plugin
+  - sudo apt-cache show java-common
   - java -version
   - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
   - java -version
