--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
   - sudo apt install openjdk-8-jdk icedtea-8-plugin
   - sudo apt-cache show java-common
   - java -version
+  - sudo patch -d /usr/sbin < 0001-Support-the-jdkhl-alternatives-type.patch
   - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
   - java -version
   - pytest test.py
