--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ script:
   - sudo patch -d /usr/sbin < 0001-Support-the-jdkhl-alternatives-type.patch
   - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
   - which java
+  - echo $PATH
   - java -version
   - pytest test.py
