--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - sudo apt-cache show java-common
   - java -version
   # - sudo patch -d /usr/sbin < 0001-Support-the-jdkhl-alternatives-type.patch
-  - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
+  # - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
   - which java
   - echo $PATH
   - /usr/local/lib/jvm/openjdk11/bin/java -version
