--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   # - sudo patch -d /usr/sbin < 0001-Support-the-jdkhl-alternatives-type.patch
   # - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
   # - which java
-  # - echo $PATH
+  - echo $PATH
   - /usr/local/lib/jvm/openjdk11/bin/java -version
   - /usr/bin/java -version
   - pytest test.py
