do we have switch script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ script:
   - /usr/local/lib/jvm/openjdk11/bin/java -version
   - /usr/bin/java -version
   - pytest test.py
-  - export PATH=/usr/bin
-  - java -version
+  - find / -name '*jdk_switcher*' -print
+  # - export PATH=/usr/bin
+  # - java -version
