--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ script:
   - /usr/local/lib/jvm/openjdk11/bin/java -version
   - /usr/bin/java -version
   - pytest test.py
-  - find / -name '*jdk_switcher*' -print
+  - find / -name '*jdk_switcher*' -print 2>/dev/null
   # - export PATH=/usr/bin
   # - java -version
