--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ script:
   - /usr/local/lib/jvm/openjdk11/bin/java -version
   - /usr/bin/java -version
   - pytest test.py
-  - . ./jdk_switcher.sh
+  - source ./jdk_switcher.sh
   - jdk_switcher use openjdk8
+  - source ./custom_path.sh
+  - export PATH=$(get_filtered_path /usr/local/lib/jvm/openjdk11/bin)
   - java -version
-  # - export PATH=/usr/bin
-  # - java -version
