--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,7 @@ dist: xenial
 python:
   - 3.5
 script:
-  # - sudo apt install openjdk-8-jdk icedtea-8-plugin
-  # - sudo apt-cache show java-common
-  # - java -version
-  # - sudo patch -d /usr/sbin < 0001-Support-the-jdkhl-alternatives-type.patch
-  # - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
-  # - which java
+  - java -version
   - echo $PATH
   - /usr/local/lib/jvm/openjdk11/bin/java -version
   - /usr/bin/java -version
